--- a/src/library_task/styles.css
+++ b/src/library_task/styles.css
@@ -457,3 +457,84 @@ footer {
 .cogwheel:hover {
   background: #1281c7;
 }
+
+/* Popup window */
+.popup {
+  display: none;
+  position: fixed;
+  min-height: 100vh;
+  min-width: 100vw;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 99;
+}
+
+.popup-inner {
+  width: 500px;
+  height: 400px;
+  margin: 200px auto;
+  background-color: #2f3649;
+  border-radius: 15px;
+  border: 2px solid rgb(218, 218, 218);
+  display: flex;
+  flex-direction: column;
+}
+
+.popup-form {
+  width: 450px;
+  margin: 70px auto;
+  font-family: Proxima, sans-serif;
+  color: white;
+}
+
+.get-book-input {
+  width: 250px;
+  height: 30px;
+  margin-left: 20px;
+  font-family: Proxima, sans-serif;
+  font-size: 15px;
+}
+
+.save-book-input {
+  padding: 10px;
+  width: 70%;
+  height: 50px;
+  border: none;
+  border-radius: 5px;
+
+  font-family: Proxima, sans-serif;
+  font-size: 18px;
+  color: white;
+
+  background: #f2795a;
+}
+
+.save-book-input:hover {
+  background: #c06149;
+  color: #ffb9a8;
+}
+
+/*stars rating*/
+.rating {
+  display: inline-flex;
+  flex-direction: row-reverse;
+}
+
+.rating__item {
+  color: #dcdcdc;
+  cursor: pointer;
+  font-size: 20px;
+  margin: 1px;
+}
+
+.rating__item:hover,
+.rating__item:hover~.rating__item {
+  color: #989898;
+}
+
+.rating[data-total-value="1"] .rating__item:nth-child(n + 5),
+.rating[data-total-value="2"] .rating__item:nth-child(n + 4),
+.rating[data-total-value="3"] .rating__item:nth-child(n + 3),
+.rating[data-total-value="4"] .rating__item:nth-child(n + 2),
+.rating[data-total-value="5"] .rating__item:nth-child(n + 1) {
+  color: orange
+}
